--- a/src/UserPage.css
+++ b/src/UserPage.css
@@ -16,5 +16,5 @@
   border-radius: 8px;
   padding: 16px;
   margin-bottom: 16px;
-  box-shadow: 10px 5px 5px #747bff;;
+  box-shadow: 10px 5px 5px #747bff;
 }
